try to fix horizontal scrolling when mobile menu is opened

--- a/css/theme.css
+++ b/css/theme.css
@@ -12,7 +12,8 @@ img{border: 0 none; height: auto; max-width: 100%; vertical-align: middle;}
 article, aside, details, figcaption, figure, footer, header, main, menu, nav, section, summary {display: block;}   /* Делаем HTML5 элементы блочными */
 /* Конец подгонки под старые браузеры*/
 
-body{color:#777777; background:#887db2; font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; font-size:15px; line-height: 22px; margin:0}
+body{color:#777777; background: #887db2; margin: 0; overflow: hidden;
+     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; font-size: 15px; line-height: 22px;}
 .wrapper{position: relative; left: 0; transition: left 0.3s ease-in-out;}
 .wrapper.open-sidebar{left: 270px;}
 .sidebar{position: absolute; top: 0; bottom: 0; left: 0; max-width: 100%; width: 270px;
